_1h6n1zu -> img-middle

--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -85,7 +85,7 @@
                     </video>
                     <div class="_15xb09ct" style="transition-duration: 800ms">
                       <div
-                        class="_1h6n1zu"
+                        class="img-middle"
                         style="
                           display: inline-block;
                           vertical-align: bottom;
