--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -85,7 +85,7 @@
                     </video>
                     <div class="_15xb09ct" style="transition-duration: 800ms">
                       <div
-                        class="_1h6n1zu"
+                        class="img-middle"
                         style="
                           display: inline-block;
                           vertical-align: bottom;
@@ -460,7 +460,7 @@
                                                       <div class="_1258d0t">
                                                         <div class="_100wjs0">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="No caption provided, listing photo, 53430351_1471249187"
@@ -602,7 +602,7 @@
                                                       <div class="_1258d0t">
                                                         <div class="_100wjs0">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="No caption provided, listing photo, 53430351_1471249192"
@@ -739,7 +739,7 @@
                                                       <div class="_1258d0t">
                                                         <div class="_100wjs0">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="No caption provided, listing photo, 53430351_1471249193"
@@ -876,7 +876,7 @@
                                                       <div class="_1258d0t">
                                                         <div class="_100wjs0">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="No caption provided, listing photo, 53430351_1471249194"
@@ -1013,7 +1013,7 @@
                                                       <div class="_1258d0t">
                                                         <div class="_100wjs0">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="No caption provided, listing photo, 53430351_1471249207"
