--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -221,7 +221,7 @@
                                     Entire condo hosted by Jose Angelo
                                   </h2>
                                   <div
-                                    class="_1h6n1zu"
+                                    class="img-middle"
                                     style="
                                       display: inline-block;
                                       vertical-align: bottom;
