--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -181,7 +181,7 @@
                               </div>
                               <div class="_1mplld7">
                                 <div
-                                  class="_1h6n1zu"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -232,7 +232,7 @@
                               </div>
                               <div class="_1mplld7">
                                 <div
-                                  class="_1h6n1zu"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -283,7 +283,7 @@
                               </div>
                               <div class="_1mplld7">
                                 <div
-                                  class="_1h6n1zu"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -334,7 +334,7 @@
                               </div>
                               <div class="_1mplld7">
                                 <div
-                                  class="_1h6n1zu"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -385,7 +385,7 @@
                               </div>
                               <div class="_1mplld7">
                                 <div
-                                  class="_1h6n1zu"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -436,7 +436,7 @@
                               </div>
                               <div class="_1mplld7">
                                 <div
-                                  class="_1h6n1zu"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
