--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3234,7 +3234,7 @@
                                 </div>
                                 <div class="_54q55d" aria-hidden="true">
                                   <div
-                                    class="_1h6n1zu"
+                                    class="img-middle"
                                     role="img"
                                     aria-busy="false"
                                     aria-label="Image for experience with title Cooking Deep Fried Bright Orange Battered Eggs"
@@ -3313,7 +3313,7 @@
                                 </div>
                                 <div class="_54q55d" aria-hidden="true">
                                   <div
-                                    class="_1h6n1zu"
+                                    class="img-middle"
                                     role="img"
                                     aria-busy="false"
                                     aria-label="Image for experience with title Cooking Deep Fried Bright Orange Battered Eggs"
