--- a/contact-host.html
+++ b/contact-host.html
@@ -331,7 +331,7 @@
                                                               "
                                                             >
                                                               <div
-                                                                class="_1h6n1zu"
+                                                                class="img-middle"
                                                                 role="img"
                                                                 aria-busy="false"
                                                                 aria-label="Rinaldo is a superhost. Learn more about Rinaldo."
@@ -1795,7 +1795,7 @@
                                                               "
                                                             >
                                                               <div
-                                                                class="_1h6n1zu"
+                                                                class="img-middle"
                                                                 style="
                                                                   display: inline-block;
                                                                   vertical-align: bottom;
@@ -2279,7 +2279,7 @@
                                                         </div>
                                                         <div class="_1auj8vf">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             style="
                                                               display: inline-block;
                                                               vertical-align: bottom;
