--- a/covidsafety.html
+++ b/covidsafety.html
@@ -561,7 +561,7 @@
                                         <div class="_5ehsob">
                                           <div aria-hidden="true">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -638,7 +638,7 @@
                                         <div class="_5ehsob">
                                           <div aria-hidden="true">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -717,7 +717,7 @@
                                         <div class="_5ehsob">
                                           <div aria-hidden="true">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -878,7 +878,7 @@
                           >
                             <div class="_1dd0qxr">
                               <div
-                                class="_1h6n1zu"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -1076,7 +1076,7 @@
                           >
                             <div class="_1dd0qxr">
                               <div
-                                class="_1h6n1zu"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -1273,7 +1273,7 @@
                           >
                             <div class="_1dd0qxr">
                               <div
-                                class="_1h6n1zu"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
