--- a/dashboard.html
+++ b/dashboard.html
@@ -2871,7 +2871,7 @@
                             <div class="_dzx88q">
                               <div class="_yczykv">
                                 <div
-                                  class="_1h6n1zu"
+                                  class="img-middle"
                                   role="img"
                                   aria-busy="false"
                                   aria-label="[object Object] [object Object]"
@@ -3081,7 +3081,7 @@
                           <div>
                             <div class="_1bi2pwy">
                               <div
-                                class="_1h6n1zu"
+                                class="img-middle"
                                 role="presentation"
                                 aria-hidden="true"
                                 style="
