--- a/experiences.html
+++ b/experiences.html
@@ -878,7 +878,7 @@
           position: static !important;
         }
       }
-      ._1h6n1zu {
+      .img-middle {
         background-position: 50% 50% !important;
         background-repeat: no-repeat !important;
       }
@@ -4242,7 +4242,7 @@
                                           </div>
                                         </div>
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Cooking Deep Fried Bright Orange Battered Eggs"
