--- a/gift.html
+++ b/gift.html
@@ -192,7 +192,7 @@
                               <div class="csdieud dir dir-ltr d-md-none">
                                 <div class="ckt2gam dir dir-ltr">
                                   <div
-                                    class="_1h6n1zu"
+                                    class="img-middle"
                                     style="
                                       display: inline-block;
                                       vertical-align: bottom;
@@ -359,7 +359,7 @@
                           <div class="wtqbghl dir dir-ltr">
                             <div class="ckt2gam dir dir-ltr">
                               <div
-                                class="_1h6n1zu"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
