--- a/inbox.html
+++ b/inbox.html
@@ -2058,7 +2058,7 @@
           position: static !important;
         }
       }
-      ._1h6n1zu {
+      .img-middle {
         background-position: 50% 50% !important;
         background-repeat: no-repeat !important;
       }
@@ -7844,7 +7844,7 @@
                                           ><div class="d-flex">
                                             <div class="_ajdgyn">
                                               <div
-                                                class="_1h6n1zu"
+                                                class="img-middle"
                                                 style="
                                                   display: inline-block;
                                                   vertical-align: bottom;
@@ -7993,7 +7993,7 @@
                                           ><div class="d-flex">
                                             <div class="_ajdgyn">
                                               <div
-                                                class="_1h6n1zu"
+                                                class="img-middle"
                                                 style="
                                                   display: inline-block;
                                                   vertical-align: bottom;
@@ -8349,7 +8349,7 @@
                                                         >
                                                           <div class="_15cornq">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Select to open user profile for Jose Angelo (Host)"
@@ -8458,7 +8458,7 @@
                                                         >
                                                           <div class="_15cornq">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Select to open user profile for Jesselle"
@@ -8563,7 +8563,7 @@
                                                         >
                                                           <div class="_15cornq">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Select to open user profile for Jose Angelo (Host)"
@@ -8671,7 +8671,7 @@
                                                         >
                                                           <div class="_15cornq">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Select to open user profile for Jose Angelo (Host)"
@@ -8997,7 +8997,7 @@
                                         href="/users/show/423517614"
                                         class="_11eqlma4"
                                         ><div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Jose Angelo (Host)"
@@ -9032,7 +9032,7 @@
                                         href="/users/show/465981293"
                                         class="_11eqlma4"
                                         ><div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Jesselle"
