--- a/notifications.html
+++ b/notifications.html
@@ -603,7 +603,7 @@
                                                   <div class="_vaj62s">
                                                     <div class="_oc275mr">
                                                       <div
-                                                        class="_1h6n1zu"
+                                                        class="img-middle"
                                                         style="
                                                           display: inline-block;
                                                           vertical-align: bottom;
@@ -703,7 +703,7 @@
                                                   <div class="_vaj62s">
                                                     <div class="_oc275mr">
                                                       <div
-                                                        class="_1h6n1zu"
+                                                        class="img-middle"
                                                         style="
                                                           display: inline-block;
                                                           vertical-align: bottom;
@@ -804,7 +804,7 @@
                                                   <div class="_vaj62s">
                                                     <div class="_oc275mr">
                                                       <div
-                                                        class="_1h6n1zu"
+                                                        class="img-middle"
                                                         style="
                                                           display: inline-block;
                                                           vertical-align: bottom;
@@ -889,7 +889,7 @@
                                                     <div class="_j30xf7y">
                                                       <div class="_6fi87sr">
                                                         <div
-                                                          class="_1h6n1zu"
+                                                          class="img-middle"
                                                           style="
                                                             display: inline-block;
                                                             vertical-align: bottom;
@@ -1010,7 +1010,7 @@
                                                       <div class="_6fi87sr">
                                                         <div class="_1u5o7fe">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             style="
                                                               display: inline-block;
                                                               vertical-align: bottom;
@@ -1045,7 +1045,7 @@
                                                       <div class="_1echw73e">
                                                         <div class="_1u5o7fe">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             style="
                                                               display: inline-block;
                                                               vertical-align: bottom;
@@ -1169,7 +1169,7 @@
                                                   <div class="_vaj62s">
                                                     <div class="_oc275mr">
                                                       <div
-                                                        class="_1h6n1zu"
+                                                        class="img-middle"
                                                         style="
                                                           display: inline-block;
                                                           vertical-align: bottom;
@@ -1283,7 +1283,7 @@
                                                   <div class="_vaj62s">
                                                     <div class="_oc275mr">
                                                       <div
-                                                        class="_1h6n1zu"
+                                                        class="img-middle"
                                                         style="
                                                           display: inline-block;
                                                           vertical-align: bottom;
@@ -1395,7 +1395,7 @@
                                                   <div class="_vaj62s">
                                                     <div class="_oc275mr">
                                                       <div
-                                                        class="_1h6n1zu"
+                                                        class="img-middle"
                                                         style="
                                                           display: inline-block;
                                                           vertical-align: bottom;
