--- a/places.html
+++ b/places.html
@@ -486,7 +486,7 @@
                                         >
                                           <div class="_1tn24b0o">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -564,7 +564,7 @@
                                         >
                                           <div class="_1tn24b0o">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -651,7 +651,7 @@
                                         >
                                           <div class="_1tn24b0o">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -738,7 +738,7 @@
                                         >
                                           <div class="_1tn24b0o">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -821,7 +821,7 @@
                                         >
                                           <div class="_1tn24b0o">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -908,7 +908,7 @@
                                         >
                                           <div class="_1tn24b0o">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -1900,7 +1900,7 @@
                                                       >
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 6"
@@ -2612,7 +2612,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -3324,7 +3324,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -4036,7 +4036,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -4748,7 +4748,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -5452,7 +5452,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -6166,7 +6166,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -6878,7 +6878,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -7510,7 +7510,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -8142,7 +8142,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -8855,7 +8855,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -9568,7 +9568,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -10280,7 +10280,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -10992,7 +10992,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -11704,7 +11704,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -12410,7 +12410,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -13190,7 +13190,7 @@
                                                               class="_1na7kj9b"
                                                             >
                                                               <div
-                                                                class="_1h6n1zu"
+                                                                class="img-middle"
                                                                 style="
                                                                   display: inline-block;
                                                                   vertical-align: bottom;
@@ -13437,7 +13437,7 @@
                                                               class="_1na7kj9b"
                                                             >
                                                               <div
-                                                                class="_1h6n1zu"
+                                                                class="img-middle"
                                                                 style="
                                                                   display: inline-block;
                                                                   vertical-align: bottom;
@@ -13664,7 +13664,7 @@
                                                               class="_1na7kj9b"
                                                             >
                                                               <div
-                                                                class="_1h6n1zu"
+                                                                class="img-middle"
                                                                 style="
                                                                   display: inline-block;
                                                                   vertical-align: bottom;
@@ -13891,7 +13891,7 @@
                                                               class="_1na7kj9b"
                                                             >
                                                               <div
-                                                                class="_1h6n1zu"
+                                                                class="img-middle"
                                                                 style="
                                                                   display: inline-block;
                                                                   vertical-align: bottom;
