--- a/products.html
+++ b/products.html
@@ -1570,7 +1570,7 @@
                                                                 "
                                                               >
                                                                 <div
-                                                                  class="_1h6n1zu"
+                                                                  class="img-middle"
                                                                   role="img"
                                                                   aria-busy="false"
                                                                   aria-label="Rinaldo is a superhost. Learn more about Rinaldo."
@@ -5638,7 +5638,7 @@
                                                                         "
                                                                       >
                                                                         <div
-                                                                          class="_1h6n1zu"
+                                                                          class="img-middle"
                                                                           role="img"
                                                                           aria-busy="false"
                                                                           aria-label="Dulce"
@@ -5778,7 +5778,7 @@
                                                                         "
                                                                       >
                                                                         <div
-                                                                          class="_1h6n1zu"
+                                                                          class="img-middle"
                                                                           role="img"
                                                                           aria-busy="false"
                                                                           aria-label="Arlene"
@@ -6035,7 +6035,7 @@
                                                                         "
                                                                       >
                                                                         <div
-                                                                          class="_1h6n1zu"
+                                                                          class="img-middle"
                                                                           role="img"
                                                                           aria-busy="false"
                                                                           aria-label="Prudz"
@@ -6282,7 +6282,7 @@
                                                             "
                                                           >
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Rinaldo is a superhost. Learn more about Rinaldo."
@@ -8679,7 +8679,7 @@
                                                                   class="_1xh26pm2"
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     style="
                                                                       display: inline-block;
                                                                       vertical-align: bottom;
@@ -8748,7 +8748,7 @@
                                                                     class="_1xh26pm2"
                                                                   >
                                                                     <div
-                                                                      class="_1h6n1zu"
+                                                                      class="img-middle"
                                                                       style="
                                                                         display: inline-block;
                                                                         vertical-align: bottom;
@@ -8812,7 +8812,7 @@
                                                                     class="_1xh26pm2"
                                                                   >
                                                                     <div
-                                                                      class="_1h6n1zu"
+                                                                      class="img-middle"
                                                                       style="
                                                                         display: inline-block;
                                                                         vertical-align: bottom;
@@ -8880,7 +8880,7 @@
                                                                     class="_1xh26pm2"
                                                                   >
                                                                     <div
-                                                                      class="_1h6n1zu"
+                                                                      class="img-middle"
                                                                       style="
                                                                         display: inline-block;
                                                                         vertical-align: bottom;
@@ -8944,7 +8944,7 @@
                                                                     class="_1xh26pm2"
                                                                   >
                                                                     <div
-                                                                      class="_1h6n1zu"
+                                                                      class="img-middle"
                                                                       style="
                                                                         display: inline-block;
                                                                         vertical-align: bottom;
@@ -9378,7 +9378,7 @@
                                                                   "
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="Rinaldo is a superhost. Learn more about Rinaldo."
@@ -18455,7 +18455,7 @@
                                                                   "
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="Dulce"
@@ -18579,7 +18579,7 @@
                                                                   "
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="Arlene"
@@ -18796,7 +18796,7 @@
                                                                   "
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="Prudz"
@@ -18982,7 +18982,7 @@
                                                                   "
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="Delwyn"
@@ -19166,7 +19166,7 @@
                                                                   "
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="Kristoffer"
@@ -19366,7 +19366,7 @@
                                                                   "
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="Janice"
@@ -19643,7 +19643,7 @@
                                                           "
                                                         >
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Rinaldo is a superhost. Learn more about Rinaldo."
