--- a/profile.html
+++ b/profile.html
@@ -390,7 +390,7 @@
                                         <div class="_fvp3r0u">
                                           <div class="_1sn7185i">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               role="img"
                                               aria-busy="false"
                                               aria-label="Jose Angelo User Profile"
@@ -604,7 +604,7 @@
                                             <div class="_fvp3r0u">
                                               <div class="_1sn7185i">
                                                 <div
-                                                  class="_1h6n1zu"
+                                                  class="img-middle"
                                                   role="img"
                                                   aria-busy="false"
                                                   aria-label="Jose Angelo User Profile"
@@ -1460,7 +1460,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                       class="_9bezani"
                                                       ><div class="_1i1lh00h">
                                                         <div
-                                                          class="_1h6n1zu"
+                                                          class="img-middle"
                                                           role="img"
                                                           aria-busy="false"
                                                           aria-label="Jesselle User Profile"
@@ -1542,7 +1542,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                   <div class="_fvp3r0u">
                                     <div class="_1sn7185i">
                                       <div
-                                        class="_1h6n1zu"
+                                        class="img-middle"
                                         style="
                                           display: inline-block;
                                           vertical-align: bottom;
@@ -1757,7 +1757,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       <div class="_fvp3r0u">
                                         <div class="_1sn7185i">
                                           <div
-                                            class="_1h6n1zu"
+                                            class="img-middle"
                                             style="
                                               display: inline-block;
                                               vertical-align: bottom;
@@ -2609,7 +2609,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 class="_9bezani"
                                                 ><div class="_1i1lh00h">
                                                   <div
-                                                    class="_1h6n1zu"
+                                                    class="img-middle"
                                                     style="
                                                       display: inline-block;
                                                       vertical-align: bottom;
