--- a/resolutions.html
+++ b/resolutions.html
@@ -90,7 +90,7 @@
                         <div class="_40z4k8">
                           <div class="_1js2oqjc">
                             <div
-                              class="_1h6n1zu"
+                              class="img-middle"
                               role="img"
                               aria-busy="false"
                               aria-label="User Profile Image"
