--- a/resources.html
+++ b/resources.html
@@ -4036,7 +4036,7 @@
                                     ><div class="_1rzj9z6">
                                       <div class="_e296pg">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -4123,7 +4123,7 @@
                                     ><div class="_1rzj9z6">
                                       <div class="_e296pg">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -4232,7 +4232,7 @@
                                     ><div class="_1rzj9z6">
                                       <div class="_e296pg">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -4319,7 +4319,7 @@
                                     ><div class="_1rzj9z6">
                                       <div class="_e296pg">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -4406,7 +4406,7 @@
                                     ><div class="_1rzj9z6">
                                       <div class="_e296pg">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -4493,7 +4493,7 @@
                                     ><div class="_1rzj9z6">
                                       <div class="_e296pg">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
