--- a/reviews-tell-us.html
+++ b/reviews-tell-us.html
@@ -70,7 +70,7 @@
                       <div class="_1y4q4o77">
                         <div class="_1seuoz6">
                           <div
-                            class="_1h6n1zu"
+                            class="img-middle"
                             style="
                               display: inline-block;
                               vertical-align: bottom;
