--- a/reviews.html
+++ b/reviews.html
@@ -807,7 +807,7 @@
                                       />
                                       <div class="_1wopp8n1">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -859,7 +859,7 @@
                                       />
                                       <div class="_1h2rnec">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -911,7 +911,7 @@
                                       />
                                       <div class="_1h2rnec">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -963,7 +963,7 @@
                                       />
                                       <div class="_1h2rnec">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -1015,7 +1015,7 @@
                                       />
                                       <div class="_1h2rnec">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
@@ -1067,7 +1067,7 @@
                                       />
                                       <div class="_1h2rnec">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           style="
                                             display: inline-block;
                                             vertical-align: bottom;
