--- a/specific_trip.html
+++ b/specific_trip.html
@@ -288,7 +288,7 @@
                                                                   class="_11eqlma4"
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="image 1 of 4"
@@ -440,7 +440,7 @@
                                                                   class="_11eqlma4"
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="image 2 of 4"
@@ -520,7 +520,7 @@
                                                                   class="_11eqlma4"
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="image 3 of 4"
@@ -600,7 +600,7 @@
                                                                   class="_11eqlma4"
                                                                 >
                                                                   <div
-                                                                    class="_1h6n1zu"
+                                                                    class="img-middle"
                                                                     role="img"
                                                                     aria-busy="false"
                                                                     aria-label="image 4 of 4"
