--- a/submission/about.html
+++ b/submission/about.html
@@ -1136,7 +1136,7 @@
                                   <div class="_7ytxmo">
                                     <div class="_1tn24b0o">
                                       <div
-                                        class="_1h6n1zu"
+                                        class="img-middle"
                                         style="
                                           display: inline-block;
                                           vertical-align: bottom;
