--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1118,7 +1118,7 @@
                                                     <div class="_1258d0t">
                                                       <div class="_100wjs0">
                                                         <div
-                                                          class="_1h6n1zu"
+                                                          class="img-middle"
                                                           role="img"
                                                           aria-busy="false"
                                                           aria-label="No caption provided, listing photo, 4016631_1444327577"
@@ -1242,7 +1242,7 @@
                                                     <div class="_1258d0t">
                                                       <div class="_100wjs0">
                                                         <div
-                                                          class="_1h6n1zu"
+                                                          class="img-middle"
                                                           role="img"
                                                           aria-busy="false"
                                                           aria-label="No caption provided, listing photo, 4016631_1444327609"
@@ -1366,7 +1366,7 @@
                                                     <div class="_1258d0t">
                                                       <div class="_100wjs0">
                                                         <div
-                                                          class="_1h6n1zu"
+                                                          class="img-middle"
                                                           role="img"
                                                           aria-busy="false"
                                                           aria-label="No caption provided, listing photo, 4016631_1444327648"
@@ -1490,7 +1490,7 @@
                                                     <div class="_1258d0t">
                                                       <div class="_100wjs0">
                                                         <div
-                                                          class="_1h6n1zu"
+                                                          class="img-middle"
                                                           role="img"
                                                           aria-busy="false"
                                                           aria-label="No caption provided, listing photo, 4016631_1444327652"
@@ -1614,7 +1614,7 @@
                                                     <div class="_1258d0t">
                                                       <div class="_100wjs0">
                                                         <div
-                                                          class="_1h6n1zu"
+                                                          class="img-middle"
                                                           role="img"
                                                           aria-busy="false"
                                                           aria-label="No caption provided, listing photo, 4016631_1444327660"
