--- a/trips.html
+++ b/trips.html
@@ -317,7 +317,7 @@
                                     </div>
                                     <div class="i7jcefp dir dir-ltr">
                                       <div
-                                        class="_1h6n1zu"
+                                        class="img-middle"
                                         style="
                                           display: inline-block;
                                           vertical-align: bottom;
@@ -436,7 +436,7 @@
                                             ><div class="c1gmbq7c dir dir-ltr">
                                               <div class="idybhsv dir dir-ltr">
                                                 <div
-                                                  class="_1h6n1zu"
+                                                  class="img-middle"
                                                   style="
                                                     display: inline-block;
                                                     vertical-align: bottom;
@@ -559,7 +559,7 @@
                                             ><div class="c1gmbq7c dir dir-ltr">
                                               <div class="idybhsv dir dir-ltr">
                                                 <div
-                                                  class="_1h6n1zu"
+                                                  class="img-middle"
                                                   style="
                                                     display: inline-block;
                                                     vertical-align: bottom;
