--- a/wishlist.html
+++ b/wishlist.html
@@ -407,7 +407,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -1151,7 +1151,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -1799,7 +1799,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -2558,7 +2558,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
@@ -3234,7 +3234,7 @@
                                                       <div class="_yydl86">
                                                         <div class="_1na7kj9b">
                                                           <div
-                                                            class="_1h6n1zu"
+                                                            class="img-middle"
                                                             role="img"
                                                             aria-busy="false"
                                                             aria-label="Image 1"
