--- a/wishlists.html
+++ b/wishlists.html
@@ -241,7 +241,7 @@
                                             <div class="_7ytxmo">
                                               <div class="_miupcl">
                                                 <div
-                                                  class="_1h6n1zu"
+                                                  class="img-middle"
                                                   role="img"
                                                   aria-busy="false"
                                                   aria-label="1st Wishlist"
@@ -312,7 +312,7 @@
                                             <div class="_7ytxmo">
                                               <div class="_miupcl">
                                                 <div
-                                                  class="_1h6n1zu"
+                                                  class="img-middle"
                                                   role="img"
                                                   aria-busy="false"
                                                   aria-label="5th"
@@ -373,7 +373,7 @@
                                             <div class="_7ytxmo">
                                               <div class="_miupcl">
                                                 <div
-                                                  class="_1h6n1zu"
+                                                  class="img-middle"
                                                   role="img"
                                                   aria-busy="false"
                                                   aria-label="Cooking"
@@ -436,7 +436,7 @@
                                             <div class="_7ytxmo">
                                               <div class="_miupcl">
                                                 <div
-                                                  class="_1h6n1zu"
+                                                  class="img-middle"
                                                   role="img"
                                                   aria-busy="false"
                                                   aria-label="Concerts"
@@ -499,7 +499,7 @@
                                             <div class="_7ytxmo">
                                               <div class="_miupcl">
                                                 <div
-                                                  class="_1h6n1zu"
+                                                  class="img-middle"
                                                   role="img"
                                                   aria-busy="false"
                                                   aria-label="Experiences"
@@ -745,7 +745,7 @@
                                         <div class="_lwqy2j">
                                           <div class="_aca5sbg">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -778,7 +778,7 @@
                                           </div>
                                           <div class="_96vpykx">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -810,7 +810,7 @@
                                           </div>
                                           <div class="_17xhhvdx">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -860,7 +860,7 @@
                                         <div class="_lwqy2j">
                                           <div class="_aca5sbg">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -892,7 +892,7 @@
                                           </div>
                                           <div class="_96vpykx">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -924,7 +924,7 @@
                                           </div>
                                           <div class="_17xhhvdx">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -971,7 +971,7 @@
                                         <div class="_lwqy2j">
                                           <div class="_aca5sbg">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -1003,7 +1003,7 @@
                                           </div>
                                           <div class="_96vpykx">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -1035,7 +1035,7 @@
                                           </div>
                                           <div class="_17xhhvdx">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -1082,7 +1082,7 @@
                                         <div class="_lwqy2j">
                                           <div class="_4vkmwmg">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -1115,7 +1115,7 @@
                                           </div>
                                           <div class="_1ml83k4g">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -1163,7 +1163,7 @@
                                         <div class="_lwqy2j">
                                           <div class="_aca5sbg">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -1195,7 +1195,7 @@
                                           </div>
                                           <div class="_96vpykx">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
@@ -1227,7 +1227,7 @@
                                           </div>
                                           <div class="_17xhhvdx">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               style="
                                                 display: inline-block;
                                                 vertical-align: bottom;
