--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -98,7 +98,7 @@
                     </video>
                     <div class="_15xb09ct" style="transition-duration: 800ms">
                       <div
-                        class="_1h6n1zu"
+                        class="img-middle"
                         style="
                           display: inline-block;
                           vertical-align: bottom;
