--- a/edit/photos.html
+++ b/edit/photos.html
@@ -480,7 +480,7 @@
                                                 <div class="_1258d0t">
                                                   <div class="_100wjs0">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       role="img"
                                                       aria-busy="false"
                                                       aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc4MA=="
@@ -674,7 +674,7 @@
                                                 <div class="_1258d0t">
                                                   <div class="_100wjs0">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       role="img"
                                                       aria-busy="false"
                                                       aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
@@ -805,7 +805,7 @@
                                                 <div class="_1258d0t">
                                                   <div class="_100wjs0">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       role="img"
                                                       aria-busy="false"
                                                       aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
@@ -936,7 +936,7 @@
                                                 <div class="_1258d0t">
                                                   <div class="_100wjs0">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       role="img"
                                                       aria-busy="false"
                                                       aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
@@ -1067,7 +1067,7 @@
                                                 <div class="_1258d0t">
                                                   <div class="_100wjs0">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       role="img"
                                                       aria-busy="false"
                                                       aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
@@ -1198,7 +1198,7 @@
                                                 <div class="_1258d0t">
                                                   <div class="_100wjs0">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       role="img"
                                                       aria-busy="false"
                                                       aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
@@ -1329,7 +1329,7 @@
                                                 <div class="_1258d0t">
                                                   <div class="_100wjs0">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       role="img"
                                                       aria-busy="false"
                                                       aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
@@ -1460,7 +1460,7 @@
                                                 <div class="_1258d0t">
                                                   <div class="_100wjs0">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       role="img"
                                                       aria-busy="false"
                                                       aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA=="
@@ -1591,7 +1591,7 @@
                                                 <div class="_1258d0t">
                                                   <div class="_100wjs0">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       role="img"
                                                       aria-busy="false"
                                                       aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2MA=="
@@ -1777,7 +1777,7 @@
                                     >
                                       <div class="_14tkmhr">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
@@ -1836,7 +1836,7 @@
                                       </div>
                                       <div class="_14tkmhr">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
@@ -1895,7 +1895,7 @@
                                       </div>
                                       <div class="_14tkmhr">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
@@ -1954,7 +1954,7 @@
                                       </div>
                                       <div class="_14tkmhr">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
@@ -2013,7 +2013,7 @@
                                       </div>
                                       <div class="_14tkmhr">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
@@ -2072,7 +2072,7 @@
                                       </div>
                                       <div class="_14tkmhr">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
@@ -2131,7 +2131,7 @@
                                       </div>
                                       <div class="_14tkmhr">
                                         <div
-                                          class="_1h6n1zu"
+                                          class="img-middle"
                                           role="img"
                                           aria-busy="false"
                                           aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA=="
